--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ body {
     align-items: flex-start;
     padding: 0 20px; 
     box-sizing: border-box; 
-    gap: 50px; /* 新增：为信息容器和按钮区域添加间距 */
+    gap: 30px; /* 信息容器和按钮区域添加间距 */
 }
 
 .info-container { 
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     width: 30%; 
-    background-color: #3a3a3a; 
+    background-color: #151515; 
     padding: 10px; 
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -89,7 +89,7 @@ body {
 }
 
 .button-disabled {
-    background-color: gray;
+    background-color: rgb(20, 20, 20);
     cursor: not-allowed;
 }
 
