--- a/index.css
+++ b/index.css
@@ -125,6 +125,8 @@ body {
     color: white;
     padding: 5px;
     font-size: 12px;
+    width: auto; /* 自动调整宽度 */
+    max-width: 20%; /* 最大宽度为图片宽度的 20% */
 }
 
 @media (max-width: 600px) {
