--- a/index.css
+++ b/index.css
@@ -121,12 +121,12 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: transparent;
     color: white;
     padding: 5px;
-    font-size: 12px;
-    width: auto; /* 自动调整宽度 */
-    max-width: 20%; /* 最大宽度为图片宽度的 20% */
+    font-size: 10px;
+    width: auto;
+    height: 2vh;
 }
 
 @media (max-width: 600px) {
